--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "dist"
   ],
   "scripts": {
-    "start": "tsx ./start.ts",
+    "start": "node ./start.mjs",
     "lint": "eslint src/**/*.{ts,tsx} *.ts",
     "build": "pkgroll",
     "prepublishOnly": "yarn build",
@@ -40,5 +40,8 @@
   },
   "engines": {
     "node": ">=22"
+  },
+  "dependencies": {
+    "encore.dev": "^1.44.6"
   }
 }
